# flx-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: run.bat
src/: lib.rs  search.rs
