[package]
name = "flx-rs"
version = "0.1.0"
authors = ["Jen-Chieh Shen <jenchieh94@gmail.com>"]
description = "Full-text searching and scoring of strings"
repository = "https://github.com/jcs090218/flx-rs"
homepage = "https://github.com/jcs090218/flx-rs"
readme = "README.md"
keywords = ["search", "fuzzy", "string"]
license = "MIT"
documentation = "https://docs.rs/flx-rs"
