[package]
name = "flx-rs"
version = "0.2.1"
authors = ["Jen-Chieh Shen <jenchieh94@gmail.com>"]
description = "Rewrite emacs-flx in Rust for dynamic modules"
repository = "https://github.com/the-flx/flx-rs"
homepage = "https://github.com/the-flx/flx-rs"
readme = "README.md"
keywords = ["search", "fuzzy", "string"]
license = "MIT"
documentation = "https://docs.rs/flx-rs"
